# axum-tutorial

./: .gitignore  Cargo.toml
migrations/: 20260318130027_create_users_table.sql
src/: ca.pem  init.rs  main.rs  routes.rs
src/data/: errors.rs  user.rs
src/handlers/: auth.rs  errors.rs  helpers.rs  mod.rs  public.rs  todos.rs
src/models/: app.rs  mod.rs  templates.rs  user_form_model.rs
templates/: index.html
templates/pages/: create.html  home.html  log-in.html  not-found.html  server-error.html  sign-up.html  todos.html
templates/partials/: navigation.html
