[package]
name = "axum_tutorial"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
askama = "0.15"
tower-http = { version = "0.6.8", features = ["fs"] }