[package]
name = "axum_tutorial"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
askama = "0.15"
tower-http = { version = "0.6.8", features = ["fs", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
validator = {version = "0.20.0", features = ["derive"]}
regex = "1.12.3"
dotenvy = "0.15"
sqlx = {version = "0.8.6", features = ["runtime-tokio", "tls-rustls", "postgres", "macros"]}
